# web3-arbitrage-bot

./: .env.dev  .gitignore  Cargo.toml  config.toml.example  doc.txt
scripts/: cetus-pools.json  cetus-pools.toml  cetus-script.py  tokens.txt
src/: lib.rs  main.rs
src/arbitrage/: arbitrage_engine.rs  calculator.rs  detector.rs  mod.rs  validator.rs
src/blockchain/: mod.rs
src/client/: sui_rpc.rs
src/dex/: adapter.rs  cetus.rs  manager.rs  mod.rs  state.rs
src/dex/cetus/: mod.rs
src/event/: context.rs  mod.rs  processor.rs  websocket.rs
src/execution/: executor.rs
src/sync/: fetcher.rs  mod.rs  rpc.rs  state.rs  synchronizer.rs
src/types/: address.rs  arbitrage.rs  common.rs  dex.rs  error.rs  execution.rs  mod.rs  pool.rs  snapshot.rs
src/types/pool/: cetus.rs  extractor.rs  mod.rs  pool_parser.rs  pool_state.rs  turbos.rs
src/utils/: config.rs  logger.rs  math.rs  mod.rs
